--- a/src/Paginas/Home/style.css
+++ b/src/Paginas/Home/style.css
@@ -105,6 +105,6 @@ main #Sobre{
 main #Projetos{
     padding: 50px 0;
     width: 100%;
-    background-color: #dddddd;
-    color: #000;
+    background-color: #121212;
+    color: #fff;
 }
