--- a/src/Componentes/Projeto/card/card.css
+++ b/src/Componentes/Projeto/card/card.css
@@ -1,33 +1,94 @@
 .box{
-    width: 220px;
-    height: 370px;
-    border-radius: 5px;
+    width: 280px;
+    height: 420px;
+    border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .card{
-    padding: 10px 5px;
-    width: 200px;
-    height: 340px;
+    padding: 10px;
+    width: 260px;
+    height: 390px;
     background-color: #121212;
-    box-shadow: 0px 0px 10px 5px #0000001e;
-    border-radius: 5px;
+    box-shadow: 0px 0px 10px 10px #00000027;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     color: #fff;
     transition: .4s;
+    /*Estilos que afetam o componentes InfoCard*/
+    position: relative;
+    overflow: hidden;
 }
 .card:hover{
-    width: 220px;
-    height: 370px;
+    width: 280px;
+    height: 420px;
     box-shadow: 0px 0px 10px 5px #0000001e;
 }
-.card a{
+/*Classes da div que contém as infomações dos cards*/
+.ativo, .inativo{
+    padding: 20px;
+    text-align: left;
+    background-color: #000000ef;
+    border-radius: 15px;
+    position: absolute;
+    width: 100%;
+    height: 70%;
+    top: 0;
+    left: 0;
+}
+.ativo h3, 
+.inativo h3{
+    color: #F0ED40;
+}
+.ativo p, 
+.inativo p{
+    padding: 15px 0;
+    line-height: 24px;
+}
+.inativo{
+    display: none;
+}
+/*Fim dos estilos das Classes da div que contém as infomações dos cards*/
+.card .imagemProjeto{
+    background-color: #fff;
+    width: 100%;
+    height: 57%;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-radius: 5px;
+}
+.card .imagemProjeto img{
+    width: 80%;
+    height: 100%;
+}
+.card .icones{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 5px;
+}
+.card .icones img{
+    padding: 7px;
+    width: 40px;
+    border-radius: 10px;
+}
+.card .icones img:hover{
+    background-color: #5f5f5f94;
+    cursor: pointer;
+}
+.card .icones img.clicou{
+    background-color: #000;
+}
+.card .botao{
+    width: 90%;
     background-color: #F0ED40;
-    padding: 7px 17px;
+    padding: 10px 17px;
     border-radius: 5px;
     font-size: 14px;
     font-weight: bold;
@@ -35,21 +96,6 @@
     color: #000;
     box-shadow: 0px 0px 5px 2px #0000004d;
 }
-.card div{
-    background-color: #fff;
-    width: 100%;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    border-radius: 5px;
-}
-.card div img{
-    width: 80%;
-    height: 100%;
-}
-.card p{
-    font-size: 14px;
-    padding:0 10px;
-}
-.card p span{
-    font-weight: bold;
+.card .botao:hover{
+    background-color: #f0ed40e3;
 }
