--- a/src/Componentes/Header/header.css
+++ b/src/Componentes/Header/header.css
@@ -10,7 +10,7 @@ header .tam-max{
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 50px;
-    padding: 0px 20px;
+    padding: 0px;
 }
 header .tam-max .logo{
     width: 70px;
