--- a/src/Paginas/Home/style.css
+++ b/src/Paginas/Home/style.css
@@ -54,7 +54,7 @@ main #Sobre{
     padding: 70px 20px;
 }
 #Sobre .tam-max{
-    padding: 0px 20px;
+    padding: 0px ;
     text-align: left;
     display: flex;
     align-items: center;
@@ -113,5 +113,5 @@ main #Projetos{
 }
 .tema h2{
     text-align: left;
-    padding-left: 67px;
+    padding-left: 50px;
 }
