--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
 }
+.App{
+  text-align: center;
+}
 .tam-max{
   max-width: 1024px;
   margin: 0 auto;
