--- a/src/Componentes/footer/formulario/formulario.css
+++ b/src/Componentes/footer/formulario/formulario.css
@@ -1,15 +1,18 @@
-.formulario{
-    padding: 0 0 10px;
+.formulario {
+    padding: 0;
 }
-.formulario form p{
+
+.formulario form p {
     padding: 12px 0;
     margin-bottom: 20px;
 }
-form label{
+
+form label {
     cursor: pointer;
     padding-bottom: 10px;
 }
-form input{
+
+form input {
     width: 100%;
     background-color: transparent;
     border: none;
@@ -18,27 +21,33 @@ form input{
     color: black;
     margin-right: 70px;
 }
-input#sms{
+
+input#sms {
     height: 40px;
 }
+
 form .dadosPessoais,
-form .mensagem{
+form .mensagem {
     margin-right: 10px;
 }
-form .dadosPessoais{
+
+form .dadosPessoais {
     display: flex;
     gap: 20px;
 }
+
 .dadosPessoais div,
-.mensagem div{
+.mensagem div {
     display: flex;
     flex-direction: column;
 }
+
 .dadosPessoais div input,
-.mensagem div input{
+.mensagem div input {
     padding: 5px 1px;
 }
-.mensagem button{
+
+.mensagem button {
     padding: 10px;
     color: #fff;
     background-color: #121212;
@@ -47,9 +56,10 @@ form .dadosPessoais{
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    transition: .3s;
+    transition: 0.3s;
 }
-.mensagem button:hover{
+
+.mensagem button:hover {
     background-color: #000;
-    box-shadow: 0px 0px 10px #0000007e;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
