--- a/src/Componentes/Projetos/card/card.css
+++ b/src/Componentes/Projetos/card/card.css
@@ -22,6 +22,7 @@
     /*Estilos que afetam o componentes InfoCard*/
     position: relative;
     overflow: hidden;
+    cursor: pointer;
 }
 .card:hover{
     width: 280px;
@@ -34,6 +35,7 @@
     text-align: left;
     background-color: #000000f5;
     border-radius: 15px;
+    overflow-y: auto;
     position: absolute;
     width: 100%;
     height: 70%;
