--- a/src/Paginas/LoadingPage/loading.css
+++ b/src/Paginas/LoadingPage/loading.css
@@ -26,16 +26,22 @@
     display: flex;
     flex-direction: column;
 }
-.loadingPage nav{
-    max-width: 1024px;
-    margin: 0 auto;
-    text-align: right;
-    padding: 20px 15px;
+.boasVindas nav{
+    padding-bottom: 15px;
 }
 .link{
-   color: #000;
+    background-color: #121212;
 }
 .link:hover{
-    background-color: transparent;
+    background-color: #fff;
     box-shadow: 0px 0px 5px #00000062;
+}
+.boasVindas .paragrafos{
+    padding: 10px;
+    max-width: 500px;
+    text-align: left;
+}
+.paragrafos p{
+    line-height: 24px;
+    margin-bottom: 10px;
 }
