--- a/src/Componentes/Header/header.css
+++ b/src/Componentes/Header/header.css
@@ -2,6 +2,7 @@ header{
     width: 100%;
     background-color: #121212;
     padding: 10px;
+    position: relative;
 }
 header .tam-max{
     background-color: #121212;
@@ -33,3 +34,26 @@ nav a:hover{
     color: #121212;
     transition: .3s;
 }
+header .menu{
+    display: none;
+    position: absolute;
+    right: 10px;
+}
+header .menu img{
+    cursor: pointer;
+    filter: invert(90%);
+    width: 35px;
+}
+header .menu .hamburguer{
+    display: none;
+}
+header .menu .opcoes{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    display: none;
+}
+.menu .opcoes .a{
+    width: 100%;
+}
+
