--- a/src/Componentes/footer/formulario/formulario.css
+++ b/src/Componentes/footer/formulario/formulario.css
@@ -1,7 +1,10 @@
 .formulario {
-    width: 500px;
-    overflow-x: hidden;
+    max-width: 500px;
     padding: 5px;
+    overflow: auto;
+}
+.formulario form{
+    max-width: 500px;
 }
 .formulario form p {
     padding: 12px 0;
@@ -61,4 +64,9 @@ textarea{
 .mensagem button:hover {
     background-color: #000;
     box-shadow: 0px 0px 10px #00000080;
+}
+@media screen and (max-width: 500px) {
+    form .dadosPessoais {
+        flex-direction: column;
+    }
 }
